# super-agents

./: .gitignore  README.md  benchmark_config.yaml  config.causal_analysis_test.yaml  config.collaboration_benchmark.yaml  config.full_system_test.yaml  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: performance_benchmark.yml
docs/: advanced_experimentation.md  ai_driven_development.md  architecture.md  brainstorming_techniques.md  creating_variants.md  enterprise_roadmap.md  mab_orchestrator.md  production_architecture.md
meta_orchestrator/: ADR.md  README.md  __init__.py  cli.py
meta_orchestrator/agent_forge/: code_generator.py  code_healer.py  designer.py
meta_orchestrator/analysis/: causal_analyzer.py  config_generator.py  post_hoc_analyzer.py
meta_orchestrator/ci/: pipeline.yml
meta_orchestrator/code_modernizer/: llm_modernizer.py  modernizer.py
meta_orchestrator/core/: base_adversarial_variant.py  base_tunable_variant.py  base_variant.py  interpreter.py  resource_manager.py
meta_orchestrator/dashboard/: app.py
meta_orchestrator/experiment_hub/: __init__.py  app.py  execution.py  hub.py  registry.py  scoring.py
meta_orchestrator/experiment_hub/variants/: __init__.py  adversarial_agents.py  caching_agent.py  (+4 more)
meta_orchestrator/orchestrators/: mab_orchestrator.py  unified_orchestrator.py
meta_orchestrator/results/: latest_run.json  live_run.jsonl
meta_orchestrator/simulations/: adaptive_sim.py
meta_orchestrator/testing/: scaffolder.py
meta_orchestrator/tests/: chaos.sh  test_contract.py  test_in_memory.py  test_unit.py
(+34 files in other folders)
