[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-orchestrator"
version = "2.1.0" # Version bump for new features
authors = [
    {name = "Jules", email = "jules@example.com"},
]
description = "A self-improving agent system for automated AI experimentation and optimization."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pyyaml",
    "openai", # Keeping for when the key is available
    "streamlit", # Add new dependency for the dashboard
]

[project.urls]
Homepage = "https://github.com/example/meta-orchestrator"
Issues = "https://github.com/example/meta-orchestrator/issues"